# pix-tell

./: .gitignore  CHANGELOG.md  README.md  config.ini  logging.ini  pyproject.toml
.github/: copilot-instructions.md
pix_tell/: __init__.py  __main__.py  app.py  service.py  util.py
tests/: __init__.py  test_app.py  test_init.py  test_main.py  test_service.py  test_util.py
